[package]
name = "p2p_simple"
version = "0.1.0"
authors = ["rink1969 <rink1969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tentacle = { version = "0.2", features = ["molc"] }
tokio = "0.1.0"
futures = "0.1.0"
crossbeam-channel = "0.4"
bytes = "0.4"
log = "0.4.8"
parking_lot = "0.10.0"
hex = "0.4.0"

[dev-dependencies]
env_logger = "0.7.1"