[package]
name = "p2p_simple"
version = "0.1.0"
authors = ["rink1969 <rink1969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tentacle = { git = "https://github.com/nervosnetwork/tentacle", version = "0.4.0-alpha.1" }
tokio = { version = "1.0", features = ["sync"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
futures = { version = "0.3.0" }
crossbeam-channel = "0.4"
bytes = "1.0"
log = "0.4.8"
parking_lot = "0.10.0"
hex = "0.4.0"

[dev-dependencies]
env_logger = "0.7.1"